bridge/base/0-recette-project-namespace.yaml
#! 0-recette-project-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: recette-project
    labels:
        com.docker.compose.project: recette_project
