bridge/base/database-expose.yaml
#! database-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database
    namespace: recette-project
    labels:
        com.docker.compose.project: recette_project
        com.docker.compose.service: database
spec:
    selector:
        com.docker.compose.project: recette_project
        com.docker.compose.service: database
    ports:
        - name: database-3306
          port: 3306
          targetPort: database-3306
        - name: database-33060
          port: 33060
          targetPort: database-33060
