bridge/base/database-service.yaml
# check if there is at least one published port

#! database-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database-published
    namespace: recette-project
    labels:
        com.docker.compose.project: recette_project
        com.docker.compose.service: database
spec:
    selector:
        com.docker.compose.project: recette_project
        com.docker.compose.service: database
    ports:
        - name: database-3308
          port: 3308
          protocol: TCP
          targetPort: database-3306

# check if there is at least one published port
