bridge/base/mailer-expose.yaml
#! mailer-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mailer
    namespace: recette-project
    labels:
        com.docker.compose.project: recette_project
        com.docker.compose.service: mailer
spec:
    selector:
        com.docker.compose.project: recette_project
        com.docker.compose.service: mailer
    ports:
        - name: mailer-1025
          port: 1025
          targetPort: mailer-1025
        - name: mailer-1110
          port: 1110
          targetPort: mailer-1110
        - name: mailer-8025
          port: 8025
          targetPort: mailer-8025
