bridge/base/php-expose.yaml
#! php-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: php
    namespace: recette-project
    labels:
        com.docker.compose.project: recette_project
        com.docker.compose.service: php
spec:
    selector:
        com.docker.compose.project: recette_project
        com.docker.compose.service: php
    ports:
        - name: php-80
          port: 80
          targetPort: php-80
